// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lists can render an dl list 1`] = `
<div>
  


  <dl
    class="dl"
  >
    
            

    <dt
      class="dl-term"
    >
      Definition List
    </dt>
    

    <dd
      class="dl-def"
    >
      A number of connected items or names written or printed consecutively, typically one below the other.
    </dd>
    
          

    <dt
      class="dl-term"
    >
      This is a term.
    </dt>
    

    <dd
      class="dl-def"
    >
      This is the definition of that term, which both live in a 
      <code>
        dl
      </code>
      .
    </dd>
    
          

    <dt
      class="dl-term"
    >
      Here is another term.
    </dt>
    

    <dd
      class="dl-def"
    >
      And it gets a definition too, which is this line.
    </dd>
    
          

    <dt
      class="dl-term"
    >
      Here is one last term.
    </dt>
    

    <dd
      class="dl-def"
    >
      With the final definition.
    </dd>
    
      
  </dl>
  

</div>
`;

exports[`lists can render an ol list 1`] = `
<div>
  


  <ol
    class="ol"
  >
    
            


    <li
      class="list-item"
    >
      
          This is the first item in the ordered list.
  
    </li>
    
          


    <li
      class="list-item"
    >
      
      
      <strong>
        This is the optional label
      </strong>
           And here is the item that goes with the label.
  
    </li>
    
          


    <li
      class="list-item"
    >
      
          Here's the third item.
  
    </li>
    
          


    <li
      class="list-item"
    >
      
          And here's the last item.
  
    </li>
    
      
  </ol>
  

</div>
`;

exports[`lists can render an ul list 1`] = `
<div>
  


  <ul
    class="ul"
  >
    
            


    <li
      class="list-item"
    >
      
          This is the first item in the unordered list.
  
    </li>
    
          


    <li
      class="list-item"
    >
      
      
      <strong>
        This is the optional label
      </strong>
           And here is the item that goes with the label.
  
    </li>
    
          


    <li
      class="list-item"
    >
      
          Here's the third item.
  
    </li>
    
          


    <li
      class="list-item"
    >
      
          And here's the last item.
  
    </li>
    
      
  </ul>
  

</div>
`;
